algorithm updated with new queries