@@ -1,107 +1,81 @@
 package nl.fontys.s3.copacoproject.persistence.impl;
 
 import jakarta.persistence.EntityManager;
-import jakarta.persistence.Query;
+import jakarta.persistence.PersistenceContext;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.CriteriaQuery;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
+import jakarta.persistence.criteria.Subquery;
 import lombok.AllArgsConstructor;
-import nl.fontys.s3.copacoproject.persistence.ComponentRepository;
 import nl.fontys.s3.copacoproject.persistence.CustomComponentRepository;
 import nl.fontys.s3.copacoproject.persistence.entity.ComponentEntity;
-import nl.fontys.s3.copacoproject.persistence.entity.supportingEntities.SpecificationTypeAndValuesForIt;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Example;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
-import org.springframework.data.repository.query.FluentQuery;
+import nl.fontys.s3.copacoproject.persistence.entity.Component_SpecificationList;
 import org.springframework.stereotype.Repository;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+
+import java.util.*;
 import java.util.function.Function;
 
 @AllArgsConstructor
 @Repository
-@EnableJpaRepositories(basePackages = "nl.fontys.s3.copacoproject.persistence")
 public class ComponentRepositoryCustomImpl implements CustomComponentRepository {
-
+    @PersistenceContext
     private EntityManager entityManager;
 
-    @Override
-    public List<ComponentEntity> getComponentsWithSpecifications(List<SpecificationTypeAndValuesForIt> specifications, Pageable pageable) {
 
-//        StringBuilder sqlQuery = new StringBuilder("SELECT c.* FROM Component c " +
-//                "JOIN Component_Specification cs ON c.id = cs.component_id " +
-//                "WHERE ");
+    @Override
+public List<ComponentEntity> findMatchingComponents(Long componentTypeId, Map<Long, List<String>> specificationConditions) {
+    // Start building the criteria query
+//    CriteriaBuilder criteriaBuilder = entityManager.getCriteriaBuilder();
+//    CriteriaQuery<ComponentEntity> query = criteriaBuilder.createQuery(ComponentEntity.class);
+//    Root<ComponentEntity> componentRoot = query.from(ComponentEntity.class);
 //
-//        // Dynamically build the conditions
-//        List<String> conditions = new ArrayList<>();
-//        for (int i = 0; i < specifications.size(); i++) {
-//            SpecificationTypeAndValuesForIt spec = specifications.get(i);
-//            conditions.add("(cs.specification_type_id = :specificationId" + i +
-//                    " AND cs.value IN :values" + i + ")");
+//    // Subquery for matching components
+//    Subquery<Long> subquery = query.subquery(Long.class);
+//    Root<Component_SpecificationList> subqueryRoot = subquery.from(Component_SpecificationList.class);
+//    subquery.select(subqueryRoot.get("componentId").get("id")); // Select component_id in subquery
+//
+//    // Build predicates for WHERE clause dynamically
+//    List<Predicate> orPredicates = new ArrayList<>();
+//    for (Map.Entry<Long, List<String>> entry : specificationConditions.entrySet()) {
+//        Long specificationTypeId = entry.getKey();
+//        List<String> values = entry.getValue();
+//
+//        Predicate specTypePredicate = criteriaBuilder.equal(
+//                subqueryRoot.get("specificationType").get("id"), specificationTypeId);
+//
+//        Predicate valuePredicate;
+//        if (values.size() == 1) {
+//            valuePredicate = criteriaBuilder.equal(subqueryRoot.get("value"), values.get(0));
+//        } else {
+//            valuePredicate = subqueryRoot.get("value").in(values);
 //        }
 //
-//        // Join all conditions with OR
-//        sqlQuery.append(String.join(" AND ", conditions));
-//        sqlQuery.append(" ORDER BY c.componentId");
+//        // Combine specification type and value predicates
+//        orPredicates.add(criteriaBuilder.and(specTypePredicate, valuePredicate));
+//    }
 //
-//        // Prepare the query
-//        Query query = entityManager.createNativeQuery(sqlQuery.toString(), ComponentEntity.class);
+//    // Combine all OR predicates for the subquery
+//    subquery.where(criteriaBuilder.or(orPredicates.toArray(new Predicate[0])));
 //
-//        // Set parameters dynamically
-//        for (int i = 0; i < specifications.size(); i++) {
-//            SpecificationTypeAndValuesForIt spec = specifications.get(i);
-//            query.setParameter("specificationId" + i, spec.getSpecificationId());
-//            query.setParameter("values" + i, Arrays.asList(spec.getValuesToBeConsideredForThisSpecification().split("\\s*,\\s*")));
-//        }
+//    // Group by component_id and add HAVING clause
+//    subquery.groupBy(subqueryRoot.get("componentId").get("id"));
+//    subquery.having(criteriaBuilder.equal(criteriaBuilder.countDistinct(subqueryRoot.get("specificationType").get("id")),
+//            specificationConditions.size()));
 //
-//        // Set pagination
-//        query.setFirstResult(pageable.getPageNumber() * pageable.getPageSize());
-//        query.setMaxResults(pageable.getPageSize());
+//    // Add the subquery to the main query
+//    query.select(componentRoot)
+//            .where(
+//                    criteriaBuilder.equal(componentRoot.get("componentType").get("id"), componentTypeId),
+//                    criteriaBuilder.in(componentRoot.get("id")).value(subquery)
+//            );
 //
-//        return query.getResultList();
-//        StringBuilder sqlQuery = new StringBuilder("SELECT c FROM ComponentEntity c " +
-//                "JOIN Component_Specification cs ON c.id = cs.component_id " +
-//                "WHERE ");
-//
-//        // Dynamically build the conditions
-//        List<String> conditions = new ArrayList<>();
-//        for (int i = 0; i < specifications.size(); i++) {
-//            SpecificationTypeAndValuesForIt spec = specifications.get(i);
-//
-//            // Create the condition for each specification type and its values
-//            conditions.add("(cs.specification_type_id = :specificationId" + i +
-//                    " AND cs.value IN :values" + i + ")");
-//        }
-//
-//        // Join all conditions with AND
-//        sqlQuery.append(String.join(" AND ", conditions));
-//        sqlQuery.append(" ORDER BY c.componentId");
-//
-//        // Prepare the query
-//        Query query = entityManager.createQuery(sqlQuery.toString(), ComponentEntity.class);
-//
-//        // Set parameters dynamically
-//        for (int i = 0; i < specifications.size(); i++) {
-//            SpecificationTypeAndValuesForIt spec = specifications.get(i);
-//            // Set specification ID parameter
-//            query.setParameter("specificationId" + i, spec.getSpecificationId());
-//
-//            // Set values as a list
-//            query.setParameter("values" + i, Arrays.asList(spec.getValuesToBeConsideredForThisSpecification().split("\\s*,\\s*")));
-//        }
-//
-//        // Set pagination
-//        query.setFirstResult(pageable.getPageNumber() * pageable.getPageSize());
-//        query.setMaxResults(pageable.getPageSize());
-//
-//        // Execute and return the result
-//        return query.getResultList();
-        return List.of();
-    }
+//    // Execute query and return results
+//    return entityManager.createQuery(query).getResultList();
+    return List.of();
+}
+
 }
 
 
